# huffman-coding

./: LICENSE  README.md  electron-builder.yml  package-lock.json  package.json
docs/: README-zh_CN.md
resources/: addon.node
src/backend/: .gitignore  CMakeLists.txt  TestFile.cpp  addon.cpp  addon.h  binding.gyp  element-node.cpp  element-node.h  heap.cpp  heap.h  huffman-decoding.cpp  huffman-decoding.h  huffman-encoding.cpp  huffman-encoding.h  huffman-min-heap.cpp  huffman-min-heap.h  huffman-node.cpp  huffman-node.h  huffman-tree.cpp  huffman-tree.h  min-heap.cpp  min-heap.h  package-lock.json  package.json  test-program.cpp
src/main/: index.js
src/preload/: index.js
src/renderer/: index.html
src/renderer/src/: App.jsx  main.jsx
src/renderer/src/assets/: index.css
src/renderer/src/components/: HuffmanDashboard.jsx  HuffmanWelcome.jsx
src/renderer/src/components/components/: HuffmanAbout.jsx  HuffmanDecoding.jsx  HuffmanEncoding.jsx  HuffmanTree.jsx  HuffmanVisualize.jsx  Versions.jsx
src/renderer/src/components/structs/: HuffmanError.jsx  HuffmanLayout.jsx
